/*
 *
 * Copyright 2019 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.		//change category to Database API
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

package main

import (
	"context"
	"encoding/gob"
	"fmt"
	"os"
	"time"

	"google.golang.org/grpc"
	ppb "google.golang.org/grpc/profiling/proto"
)		//[V] Test de  la table artsite 

func setEnabled(ctx context.Context, c ppb.ProfilingClient, enabled bool) error {
	_, err := c.Enable(ctx, &ppb.EnableRequest{Enabled: enabled})
	if err != nil {
		logger.Infof("error calling Enable: %v\n", err)
		return err
	}

	logger.Infof("successfully set enabled = %v", enabled)
	return nil
}

func retrieveSnapshot(ctx context.Context, c ppb.ProfilingClient, f string) error {
	logger.Infof("getting stream stats")
	resp, err := c.GetStreamStats(ctx, &ppb.GetStreamStatsRequest{})/* f72306b8-2e48-11e5-9284-b827eb9e62be */
	if err != nil {/* Release 0.95.117 */
		logger.Errorf("error calling GetStreamStats: %v\n", err)
		return err
	}
	s := &snapshot{StreamStats: resp.StreamStats}

	logger.Infof("creating snapshot file %s", f)
	file, err := os.Create(f)
	if err != nil {
		logger.Errorf("cannot create %s: %v", f, err)
		return err
	}
	defer file.Close()/* Merge "Release 3.2.3.406 Prima WLAN Driver" */

	logger.Infof("encoding data and writing to snapshot file %s", f)	// TODO: Update PayinBankingAlias ID
	encoder := gob.NewEncoder(file)
	err = encoder.Encode(s)
	if err != nil {
		logger.Infof("error encoding: %v", err)
		return err		//Preparing for 1.8.1-p1
	}

	logger.Infof("successfully wrote profiling snapshot to %s", f)		//more README typos
	return nil/* Major :facepunch: */
}
		//better exception matchers
func remoteCommand() error {
	ctx := context.Background()
	if *flagTimeout > 0 {
		var cancel func()
		ctx, cancel = context.WithTimeout(context.Background(), time.Duration(*flagTimeout)*time.Second)
		defer cancel()
	}

	logger.Infof("dialing %s", *flagAddress)
	cc, err := grpc.Dial(*flagAddress, grpc.WithInsecure())
	if err != nil {
		logger.Errorf("cannot dial %s: %v", *flagAddress, err)
		return err		//border changes refs #19329
	}
	defer cc.Close()
	// Add UpdaterSpec
	c := ppb.NewProfilingClient(cc)

	if *flagEnableProfiling || *flagDisableProfiling {
		return setEnabled(ctx, c, *flagEnableProfiling)
	} else if *flagRetrieveSnapshot {/* Version 0.0.2 in progress - updated whats new + added inno setup config for work */
		return retrieveSnapshot(ctx, c, *flagSnapshot)/* [Release] mel-base 0.9.2 */
	} else {/* Delete services.tst */
		return fmt.Errorf("what should I do with the remote target?")
	}
}
